error prompt letter spacing fixed

--- a/src/app/profile-edit/bio-edit/bio-edit.component.css
+++ b/src/app/profile-edit/bio-edit/bio-edit.component.css
@@ -59,7 +59,7 @@ textarea {
   display: flex;
   flex-direction: row;
   align-items: center;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.04em;
   color: #E50000;
   margin-top: 4px;
   margin-left: 14px;
